--- a/package.json
+++ b/package.json
@@ -4,24 +4,17 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "rimraf allure-reports/ && jest",
-    "start": "node src/server.js",
-    "alluviewer": "allure serve allure-results",
-    "exporter": "node src/allure-prometheus-exporter.js"
+    "test": "jest",
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "axios": "^1.3.4",
     "express": "^4.18.2",
-    "supertest": "^6.3.0"
+    "supertest": "^6.3.0",
+    "axios": "^1.3.4"
   },
   "devDependencies": {
-    "allure-commandline": "^2.34.1",
-    "allure-jest": "^3.4.3",
     "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-node": "^30.2.0",
-    "prom-client": "^15.1.3",
-    "rimraf": "^6.1.2"
+    "jest": "^29.0.0"
   },
   "engines": {
     "node": ">=22.19.0"
